test_programs/compile_failure/unused_array_set_known_index_out_of_bounds/src/main.nr
fn main() {
    let mut array = [1, 2, 3];
    array[10] = 1; // Index out of bounds
}
